--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="timer" id="countdown">Time Left: 15:00</div>
 
-    <img src="https://i.ibb.co/6RjNcdJh/Screenshot-20250719-153539.jpg" alt="QR Code" class="qr" />
+    <img src="https://i.ibb.co/C5Nb3KHN/Picsart-25-07-20-13-56-17-268.jpg" alt="QR Code" class="qr" />
 
     <div class="upi-id">UPI ID: <script>document.write(CONFIG.upi_id);</script></div>
 
@@ -25,9 +25,9 @@
     </div>
 
     <div class="form-group">
-      <input type="text" id="utr" placeholder="Enter UTR" required />
+      <input type="text" id="utr" placeholder="Enter UTR/Transaction ID" required />
       <input type="text" id="amount" placeholder="Enter Amount" required />
-      <input type="text" id="username" placeholder="Enter Username" required />
+      <input type="text" id="username" placeholder="Username In Smm Panel" required />
       <input type="file" id="paymentImage" accept="image/*" required />
     </div>
 
@@ -39,7 +39,7 @@
     <a href="https://t.me/dllsmm" target="_blank" class="contact-button">Contact</a>
   </div>
 
-  <a href="https://t.me/dllsmm" target="_blank">
+  <a href="https://t.me/JOCKERZ45" target="_blank">
     <img src="https://i.ibb.co/gGZCjFM/help-desk.png" alt="Support" class="support-icon" />
   </a>
 
